--- a/uebung-positionieren.html
+++ b/uebung-positionieren.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Übung positionieren - Teil III</title>
-		<link rel="stylesheet" href="reset.css">
-	</head>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Hund, Katze, Maus, Huhn</title>
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css" </head>
+
+
 	<body>
-		
-	</body>
+
+
+		<div class="wrapper">
+			<h1>Hund,Katze, Maus & Huhn</h1>
+
+			<div class="row">
+
+					<div class="animals">
+					<img src="hund.jpg" alt="Hund">
+					<p>hund</p>
+					</div>
+
+					<div class="animals">
+					<img src="katze.jpg" alt="katze">
+					<p>katze</p>
+				 	</div>
+
+					<div class="animals">
+					<img src="maus.jpg" alt="maus">
+					<p>maus</p>
+					</div>
+
+					<div class="animals">
+					<img src="huhn.jpg" alt="huhn">
+					<p>hund</p>
+					</div>
+
+				</div>
+
+</body>
+
+</head>
+
+
 </html>
