--- a/uebung-positionieren.html
+++ b/uebung-positionieren.html
@@ -20,25 +20,28 @@
 
 					<div class="animals">
 					<img src="hund.jpg" alt="Hund">
-					<p>hund</p>
+					<p id="hund">hund</p>
+					<span id="rund1"> </span>
 					</div>
 
 					<div class="animals">
 					<img src="katze.jpg" alt="katze">
-					<p>katze</p>
+					<p id="katze">katze</p>
+					<span id="rund2"></span>
 				 	</div>
 
 					<div class="animals">
 					<img src="maus.jpg" alt="maus">
-					<p>maus</p>
+					<p id="maus">maus</p>
 					</div>
 
 					<div class="animals">
 					<img src="huhn.jpg" alt="huhn">
-					<p>hund</p>
+					<p id="huhn">hund</p>
 					</div>
 
 				</div>
+
 
 </body>
 
